<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/sp_ciudad"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp"
        android:layout_marginRight="32dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sp_ciudad"
        android:layout_below="@+id/sp_ciudad"
        android:layout_marginTop="78dp"
        android:text="@string/escoge_salud"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/sp_especialidad"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_marginRight="32dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@drawable/doc_android"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_marginTop="22dp"
        android:src="@drawable/doc_android" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:text="@string/escoge_ciudad"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/but_enviar_infodir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/sp_especialidad"
        android:layout_marginBottom="42dp"
        android:layout_marginRight="32dp"
        android:text="@string/buscar"
        android:onClick="pasarVista"/>

</RelativeLayout>