<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
   	>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:contentDescription="@drawable/doc_android"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/imageView1"
        android:src="@drawable/doc_android" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butt_guia"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:text="@string/copyright"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@drawable/med_care"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butt_directorio"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/med_care" />
	
    <ImageButton
        android:id="@+id/butt_guia"
        android:src="@drawable/guia_auxilios"
        android:contentDescription="@drawable/guia_auxilios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butt_directorio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/butt_guia" />

    <ImageButton
        android:id="@+id/butt_directorio"
        android:src="@drawable/directorio_medico"
        android:contentDescription="@drawable/directorio_medico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butt_guia"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="81dp"
        android:layout_centerHorizontal="true"
        android:text="@string/butt_directorio" />

</RelativeLayout>